--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 mybatis.type-aliases-package=edu.dlufl.ohrigei.model
 mybatis.mapper-locations=classpath:mapping/*.xml
+mybatis.configuration.cache-enabled=true
