--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 mybatis.type-aliases-package=edu.dlufl.ohrigei.model
 mybatis.mapper-locations=classpath:mapping/*.xml
 mybatis.configuration.cache-enabled=true
+spring.messages.encoding=UTF-8
+spring.messages.basename=static/i18n/messages
+spring.messages.cache-duration=3600
