第一版完成

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,4 @@ mybatis.configuration.cache-enabled=true
 spring.messages.encoding=UTF-8
 spring.messages.basename=static/i18n/messages
 spring.messages.cache-duration=3600
+spring.resources.static-locations=classpath:/static,file:E://picture/
